<!--
  ~ Copyright (C) 2021 The Android Open Source Project.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">Sen Sen</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for app bar -->
    <string name="home_bar">Home</string>
    <string name="edit_habit_bar">Edit Habit</string>
    <string name="add_habit_bar">Add Habit</string>
    <string name="custom_habit_bar">Custom Habit</string>
    <string name="view_habit_bar">Habit Name</string>
    <string name="overview_bar">Overview</string>
    <string name="setting_bar">Settings</string>
    <string name="tutorial_bar">Tutorial</string>
    <string name="more_setting_bar">More Settings</string>
    <string name="voice_setting_bar">Voice Settings</string>
    <string name="add_voice_pack_bar">Add Voice Pack</string>
    <string name="edit_voice_pack_bar">Edit Voice Pack</string>
    <string name="custom_voice_pack_bar">Custom Voice Pack</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_archive">Archive</string>
    <string name="menu_start_over">Start Over</string>
    <string name="menu_delete">Delete</string>

    <!--  Strings used for add habit  -->
    <string name="add_name">Name</string>
    <string name="add_goals">Goals</string>
    <string name="add_frequency">Frequency</string>
    <string name="add_time_range">Time Range</string>
    <string name="add_reminder">Reminder</string>
    <string name="add_note">Note</string>
    <string name="add_edit">Edit Habit</string>

    <!-- Strings used for settings list -->
    <string name="setting_language">Language</string>
    <string name="setting_english">English</string>
    <string name="setting_chinese">Chinese</string>
    <string name="setting_theme">Theme</string>
    <string name="setting_light_mode">Light</string>
    <string name="setting_dark_mode">Dark</string>
    <string name="setting_voice_setting">Voice Setting</string>
    <string name="setting_more_setting">More Setting</string>
    <string name="setting_tutorial">Tutorial</string>
    <string name="setting_faq_and_user_support">FAQ &amp; User Support</string>
    <string name="setting_rate_and_share">Rate &amp; Share</string>
    <string name="setting_about">About</string>

    <string name="start_of_week">Start of Week</string>
    <string name="monday">Monday</string>
    <string name="sunday">Sunday</string>
    <string name="done_habit_position">Done Habit Position</string>
    <string name="bottom">Bottom</string>
    <string name="keep">Keep</string>
    <string name="night_owl_mode">Night Owl Mode</string>
    <string name="mode_on">On</string>
    <string name="mode_off">Off</string>

    <string name="question_1">Q1. Where do I add new habit?</string>
    <string name="question_2">Q2. How do I track my habits?</string>
    <string name="question_3">Q3. How do I check my habit?</string>
    <string name="question_4">Q4. Where to record my positive or negative habit?</string>
    <string name="more_help">Need more help?</string>

    <string name="version">Version</string>
    <string name="version_id">1.0.0</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="about_sen_sen">About Sen Sen</string>
    <string name="link">Links</string>

    <!-- Description for settings list -->
    <string name="setting_voice_setting_description">description</string>
    <string name="setting_more_setting_description">description</string>
    <string name="setting_tutorial_description">description</string>
    <string name="setting_faq_and_user_description">description</string>
    <string name="setting_rate_and_share_description">description</string>
    <string name="setting_about_description">description</string>

    <!-- Strings for voice setting -->
    <string name="focus_mode_reminder_toggle">Open Focus-Mode Reminder</string>
    <string name="chill_mode_reminder_toggle">Open Chill-Mode Reminder</string>
    <string name="voice_pack">Voice Packs</string>
    <string name="add_voice_pack">Add new voice pack</string>

    <!-- Strings used for fragments for navigation -->
    <string name="list_fragment_label">List Fragment</string>
    <string name="add_fragment_label">Add Fragment</string>

    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="action_menu">action_menu</string>

    <!-- For edit/add voice pack -->
    <string name="good_title">Voice for good habit</string>
    <string name="bad_title">Voice for bad habit</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="finish">Finish</string>
</resources>
