<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.forage.MainActivity">

    <item
        android:id="@+id/action_menu"
        android:icon="@drawable/ic_round_menu_24"
        android:title="@string/action_menu"
        app:showAsAction="always" />

    <group
        android:id="@+id/menu_group"
        android:visible="false" >
        <item
            android:id="@+id/menu_group_edit"
            android:title="@string/menu_edit" />
        <item
            android:id="@+id/menu_group_archive"
            android:title="@string/menu_archive" />
        <item
            android:id="@+id/menu_group_start_over"
            android:title="@string/menu_start_over" />
        <item
            android:id="@+id/menu_group_delete"
            android:title="@string/menu_delete" />
    </group>

</menu>